sources/easygenerator.Web/Content/upgradePopup.less
/* ... */
.upgrade-dialog-duplicate-course {
    .upgrade-dialog-content {
        margin-top: -308px;
    }

    .upgrade-dialog-title-image {
        background-image: @course-duplicating-upgrade-dialog-title-image-background;
        width: 360px;
        height: 130px;
    }
}

.upgrade-dialog-audio-upload {
    .upgrade-dialog-content {
        margin-top: -305px;
    }

    .upgrade-dialog-title-image {
        background-image: @audio-upload-upgrade-dialog-title-image;
        width: 333px;
        height: 118px;
    }
}

.upgrade-dialog {
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    background-color: @background-dialog-color;
    z-index: 2300;

    .upgrade-dialog-content {
        top: 50%;
        left: 50%;
        position: absolute;
        margin-left: -252px;
        width: @dialog-width;
        background-color: @dialog-content-color;
        border: 1px solid @dialog-content-border-color;
        box-shadow: @dialog-content-shadow;
        border-radius: 5px;
        font: 13px 'OpenSans';
        color: @dialog-color;
        text-align: center;
        overflow: hidden;

        button {
            height: 43px;
            width: 173px;
        }

        header {
            font-size: @dialog-header-font-size;
            color: @dialog-header-color;
            margin: 60px 15px 0;

            .upgrade-dialog-title {
                white-space: nowrap;
                color: @upgrade-dialog-title-color;
                font: @upgrade-dialog-title-font-size 'RobotoSlab-Bold';
                margin-bottom: 8px;
            }

            .upgrade-dialog-description {
                text-transform: lowercase;
            }
        }

        .upgrade-dialog-title-image {
            background-repeat: no-repeat;
            margin: 40px auto 36px auto;
        }

        .upgrade-dialog-body {
            margin: 0 15px;

            ul {
                width: 318px;
                margin-left: 123px;

                li {
                    position: relative;
                    padding-left: 26px;
                    margin-top: 30px;
                    text-align: left;
                    list-style: none;
                    line-height: 16px;

                    &:before {
                        content: '';
                        position: absolute;
                        width: 16px;
                        height: 16px;
                        left: 5px;
                        background: url("images/sprites_16.png") -84px -63px no-repeat;
                    }
                }
            }
        }

        .upgrade-dialog-buttons {
            margin-top: 40px;
            padding: 30px 15px 25px;
            background: #f3f7f9;

            .upgrade-dialog-btn-upgrade {
                font-size: 13px;
                text-transform: uppercase;
            }

            .upgrade-dialog-btn-later {
                display: inline-block;
                margin-top: 20px;
                color: #99a5b2;
                cursor: pointer;
                font-family: 'OpenSans';

                &:hover {
                    color: #64798d;
                    text-decoration: underline;
                }
            }
        }
    }
}

